<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnviarEmail">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/direccioemail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        android:hint="@string/direcci_email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/assumpte"
        app:layout_constraintTop_toBottomOf="@id/direccioemail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:hint="@string/assumpte"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="250dp"

        android:id="@+id/cos"
        app:layout_constraintTop_toBottomOf="@id/assumpte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:inputType="textMultiLine"
        android:hint="@string/cos"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        app:layout_constraintEnd_toEndOf="@id/cos"
        app:layout_constraintTop_toBottomOf="@id/cos"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:id="@+id/btenviarmail"/>

</androidx.constraintlayout.widget.ConstraintLayout>